added deps to readme

--- a/petalinux/project-spec/configs/config
+++ b/petalinux/project-spec/configs/config
@@ -119,7 +119,7 @@ CONFIG_SUBSYSTEM_FSBL_COMPILER_EXTRA_FLAGS=""
 #
 # FPGA Manager
 #
-# CONFIG_SUBSYSTEM_FPGA_MANAGER is not set
+CONFIG_SUBSYSTEM_FPGA_MANAGER=y
 
 #
 # u-boot Configuration
@@ -188,7 +188,7 @@ CONFIG_SUBSYSTEM_TFTPBOOT_DIR="/tftpboot"
 #
 # Firmware Version Configuration
 #
-CONFIG_SUBSYSTEM_HOSTNAME="petalinux"
+CONFIG_SUBSYSTEM_HOSTNAME="cora-jawn"
 CONFIG_SUBSYSTEM_PRODUCT="petalinux"
 CONFIG_SUBSYSTEM_FW_VERSION="1.00"
 
