--- a/petalinux/project-spec/configs/plnxtool.conf
+++ b/petalinux/project-spec/configs/plnxtool.conf
@@ -28,7 +28,7 @@ UNINATIVE_URL = "file:///home/pat/cora5/coraZ7-07s/petalinux/components/yocto/do
 PACKAGE_CLASSES = "package_rpm"
 DL_DIR = "${TOPDIR}/downloads"
 SSTATE_DIR = "${TOPDIR}/sstate-cache"
-hostname:pn-base-files = "petalinux"
+hostname:pn-base-files = "cora-jawn"
 PETALINUX_PRODUCT:pn-base-files-plnx = "petalinux"
 DISTRO_VERSION:pn-base-files-plnx = "1.00"
 
@@ -94,7 +94,7 @@ INHERIT += "plnx-deploy"
 PLNX_DEPLOY_DIR = "${PROOT}/images/linux"
 PACKAGE_DTB_NAME = ""
 PACKAGE_FITIMG_NAME = "image.ub"
-EXTRA_FILESLIST:append = " /home/pat/cora5/coraZ7-07s/petalinux/project-spec/configs/config:config"
+EXTRA_FILESLIST:append = " /home/pat/cora5/coraZ7-07s/petalinux/project-spec/configs/config:config /home/pat/cora5/coraZ7-07s/petalinux/project-spec/hw-description/design_1_wrapper.bit:system.bit"
 
 #Below variables helps to add bbappend changes when this file included
 WITHIN_PLNX_FLOW = "1"
@@ -107,6 +107,7 @@ INIT_MANAGER = "sysvinit"
 COMMON_FEATURES:pn-petalinux-image-minimal = "\
 		ssh-server-openssh \
 		hwcodecs \
+		package-management \
 		"
 IMAGE_LINGUAS:zynq = " "
 
@@ -116,15 +117,23 @@ IMAGE_INSTALL:pn-petalinux-image-minimal = "\
 		fpga-manager-script \
 		mtd-utils \
 		can-utils \
+		curl \
+		ethtool \
 		nfs-utils \
+		rsync \
+		wget \
 		pciutils \
 		run-postinsts \
 		udev-extraconf \
 		linux-xlnx-udev-rules \
+		net-tools \
 		packagegroup-core-boot \
+		python3 \
 		tcf-agent \
 		bridge-utils \
+		tcpdump \
 		u-boot-tools \
+		nano \
 		"
 EXTRA_USERS_PARAMS = "groupadd -r aie;useradd -p '' petalinux;passwd-expire petalinux;usermod -a -G audio petalinux;usermod -a -G video petalinux;usermod -a -G aie petalinux;usermod -a -G input petalinux; \
 "
