--- a/petalinux/project-spec/configs/zynq-generic-7z007s.conf
+++ b/petalinux/project-spec/configs/zynq-generic-7z007s.conf
@@ -45,6 +45,9 @@ YAML_SERIAL_CONSOLE_BAUDRATE = "115200"
 # Required generic machine inclusion
 require conf/machine/zynq-generic.conf
 
+# Yocto MACHINE_FEATURES Variable
+MACHINE_FEATURES += "fpga-overlay"
+
 #### No additional settings should be after the Postamble
 #### Postamble
 PACKAGE_EXTRA_ARCHS:append = "${@['', 'zynq_generic_7z007s']['zynq-generic-7z007s' != '${MACHINE}']}"
